# bicimad

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
bicimad/: __init__.py  bicimad.py
test/: test_BiciMad.py  test_UrlEMT.py
test/data/: dataframe.txt  emt.html  trips_22_11_November.csv
