[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bicimad"
version = "0.0.1"
requires-python = ">=3.9.5"
authors = [
	{name = 'Carlos Sabater Nicolas', email = 'carlossabaternicolas@gmail.com'},
]

dependencies = [ "requests >= 2.32.3", "pandas >= 2.2.3"]


[tool.setuptools.packages.find]
exclude = ["test*", "venv*"]